# terminal-messenger

./: .gitignore  CMakeLists.txt  README.md
Client/src/: MessagingStructure.cpp  MessagingStructure.hpp  SharedState.cpp  SharedState.hpp  ThreadSafeQueue.hpp  WebSocketClient.cpp  WebSocketClient.hpp
Client/src/Client/: main.cpp
Client/src/Client/UI/: ChatWindow.cpp  utils.cpp
Client/src/UI/: DialoguesWindow.hpp  InputWindow.hpp  utils.hpp
Server/: CMakeLists.txt  Dockerfile
src/: chat_message.hpp
src/Client/: MessagingStructure.hpp  client.hpp  main.cpp
src/Client/UI/: ChatWindow.hpp  DialoguesWindow.cpp  InputWindow.cpp
src/Server/: ServerInterface.hpp  main.cpp  server.hpp
